Development
	Don't tell firefox to reload plugins when running in plugin mode
	When closing preference dialog, set media start position to 0 when streaming
	Don't restart streaming media when closing preferences
	Fix problem with gnome-mplayer requesting the next item from gecko-mediaplayer, but
		gnome-mplayer is in retry mode, so two videos get played over each other
	Work around roundf compliation errors on non-Fedora Linux machines
	Prepare for GTK 2.18 Native Client windows, by using a patch from empathy
	Fix various problems found on mailing list
    Updated Polish translation
    Fix situation where mplayer thread being dead is detected in more places
    Fix problem with DVD video size being incorrect on media load
	Work on mute not being saved across items in playlist
    Updated pt_BR translation
    Add en_GB translation
    Version bump, debug message
    Fix prev and next when there are gaps in the playlist order values
    Delay loading the item to play, until everything is setup and flushed
    Don't autopause streaming media
    Pan and Scan functionality causes display issues with old mplayers, --enable-panscan
    Pan and Scan functionality (with new mplayer)
    Separate out plugin cache value and gnome-mplayer cacheing (disabled by default in player)
    Added support for --ss and --endpos command line options, similar to mplayer options
    Apple HD trailer fixes
    Don't make the link active in the about dialog if we are using gtk < 2.14
    Updated zh_CN translation from launchpad
    Add configure flag for flat volume
    Fix configure issues with gnome-power-manager and some compiler warnings
    Fix GTK 2.14 specific code
    Fix column title in playlist converting _ in playlist filename to underlines in display
    Add gl2 to the list of possible vo's, my ATI r6xx works well with it, but not gl
    Change samplerate display from KB/s to KHz
0.9.7